--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "start:mcp": "tsx mcp-server.ts",
+    "dev:https": "next dev --experimental-https --turbopack"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.18.1",
     "@vercel/mcp-adapter": "^1.0.0",
     "next": "15.5.4",
+    "openai": "^5.23.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "zod": "3"
@@ -19,12 +22,14 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.19.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.2"
   }
 }
