--- a/package.json
+++ b/package.json
@@ -11,12 +11,27 @@
     "dev:https": "next dev --experimental-https --turbopack"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
     "@modelcontextprotocol/sdk": "^1.18.1",
+    "@next/mdx": "^15.5.4",
+    "@prisma/client": "6.16.2",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@types/mdx": "^2.0.13",
     "@vercel/mcp-adapter": "^1.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.544.0",
     "next": "15.5.4",
+    "next-mdx-remote-client": "^2.1.5",
     "openai": "^5.23.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-markdown": "^10.1.0",
+    "tailwind-merge": "^3.3.1",
     "zod": "3"
   },
   "devDependencies": {
@@ -27,9 +42,11 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "prisma": "^6.16.2",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.2"
   }
 }
